@startuml
' purpose: what a harness.manifest declares, and which reader consumes each field
' covers: internal/manifest/**
' covers: defs/*/harness.manifest
' covers: embed.go
' ── agentEnv IS A THIRD KIND OF VARIABLE, AND THE DISTINCTION MATTERS ──────
' NAME: value pairs handed to the agent on EVERY backend unless the operator
' sets NAME themselves. It is neither `env` — variables the OPERATOR supplies,
' prompted for when missing and hinted about when auth fails — nor `config`,
' which forwards a host preference only when one exists.
'
' It exists because a default exported by the image entrypoint reached only the
' docker backend: sbx launches the agent through its own kit and never runs the
' entrypoint. Delivered as an ARGV on both backends, and the pairs come out in
' NAME ORDER because the plan goldens read that argv. The field cannot
' double-declare a name `env` or `config` already claims, and nothing may
' default to empty.
'
!include https://raw.githubusercontent.com/proveo-ca/identity/main/proveo.puml
title harness.manifest — the single registration point (schema)

class "Manifest\ndefs/<name>/harness.manifest" as M <<app>> {
  name : string
  description : string
  --
  egress : bool
  docker : sbx|(absent)   ('dind' is REFUSED)
  provider : string
  subscription : bool
  stability : experimental|candidate|stable
  --
  images : map[target]imageRef
  --
  Dir : string  (set by Load, not YAML)
}

class "Workspace\nworkspace:" as W <<app>> {
  layout : app
  configDir : string
  gitMode : rw | ro
  output : bool
  mode : rw | ro
}

class "Home\nhome:" as H <<app>> {
  enabled : bool
}

class "HomeMount\nhome.mounts[]" as HM <<db>> {
  host : string  (relative to PROVEO_HOME)
  container : string  (absolute)
  mode : rw | ro
  deny : []string  (basenames scrubbed each run)
}

class "EnvVar\nenv[]" as E <<error>> {
  name : string
  description : string
  secret : bool
}

class "config[]" as C <<app>> {
  names of NON-SECRET host preferences
  forwarded by value (-e NAME=value)
}

class "agentEnv\nagentEnv:" as AE <<app>> {
  NAME : value  (proveo's defaults for the agent)
  forwarded on EVERY backend (-e NAME=value)
  the operator's own value wins
}

M *-- W
M *-- H
H *-- HM
M *-- E
M *-- C
M *-- AE

note right of M
  **Adding a harness = dropping a def dir + this file.**
  Everything else enumerates from it: runnable targets,
  image refs, mount model, egress lifecycle, the daemon
  offer, auth prompts, build/test/deploy registry.
  **""docker:"" is an ENUM with one value left.** It names how a
  harness's containerisation need is met, and after
  _spec/_paradigms/retire-dind.puml there is one way to meet it:
  ""sbx"", where the microVM IS the isolation and the daemon runs
  inside it. Absent means no daemon reaches the agent.
  ""dind"" — a privileged sibling the agent could call — is not
  merely unknown but REFUSED by ""Validate"", naming ""docker: sbx""
  as the repair: a manifest still declaring it is asking for an
  isolation story proveo no longer implements, and silence would
  read as a typo. The retired ""dind:"" / ""sandbox_docker:"" boolean
  keys are still PARSED for the same reason.

  **The promise is asserted for EVERY def that makes it, and
  there is now one way to assert it.** The e2e matrix
  (""TestEveryHarnessGetsTheDockerAccessItPromises"") is derived
  from the manifests and runs one probe: an ""IsSbx"" def must
  REACH a daemon inside its sandbox. That verdict is INVERTED
  from the one it replaces, which required the sandbox to reach
  none — true while no proveo image carried
  ""com.docker.sandboxes.start-docker"" and false since.

  The boundary half moved rather than vanished:
  ""e2e/sbx_egress_test\.go"" fails when a pull from inside the
  sandbox reaches a registry no Kit allowlists, which is the
  property the five dind gates used to buy by refusing the
  daemon outright.

  The docker CLIENT is no longer asserted up front on either
  side: its survival is an sbx implementation detail that
  differs between our own two images
  (""_spec/_experiments/docker-sandbox\.puml""), so pinning it
  would encode that detail as a proveo contract. A missing one
  is still named when it bites, because
  ""assertDockerServerReachable"" separates "command not found"
  from "cannot connect".

  Splitting it into two tests over two hardcoded lists is what
  hid the gap this replaced: the sbx half silently SKIPPED on
  every host without the CLI, so ""docker: sbx"" was an unasserted
  claim for as long as it took someone to install ""sbx"".
  ""TestEveryDaemonPromiseIsCoveredBySbx"" keeps that guard with
  one branch instead of two — every promising def covered, and
  the branch not empty — so an empty matrix cannot report
  success by testing nothing.

  Validated by ""Manifest.Validate"" at load; ""Targets""
  flattens ""images"" across defs and rejects a duplicate
  target name.

  Loaded from disk (""Load"") or from the binary's
  embedded copy (""LoadFS"" + ""embed.go""), so the CLI
  works with no defs tree present.

  **Which of the two ""cmd/proveo"" picks is an override, not
  a search.** ""loadManifests"" reads the manifests embedded in
  the binary, and reads a working-tree defs dir instead when
  ""PROVEO_DEFS_DIR"" is set. That env var exists for dev
  iteration: a def can be edited and run without rebuilding
  the binary to re-embed it.
end note

note bottom of W
  ""layout"" drives ""internal/workspace"":
  * **app** — repo (or scope subdir) at ""/app"", ""-w /app"";
    monorepo case also binds root ""/app/.git"", the
    ""rootFiles"" allowlist and ""configDir""
  * **app** — ""/app"" +
    ""/app/output"", no ""-w""
  ""mode:ro"" makes the tree read-only; ""output:true"" adds
  ""/app/output"".
end note

note bottom of HM
  The **only** durable state across a ""--rm"" run.
  ""deny"" is a security control, not hygiene — see
  _spec/internal/proveohome/proveo-home-components.puml
end note

note bottom of E
  Declared env the harness reads. ""secret:true"" is never
  put on an argv: firewall forwards a sentinel and the
  broker holds the real value; broker mode forwards it
  by name; proxy withholds it.
end note

note bottom of C
  The **non-secret** counterpart to ""env"": these are
  forwarded BY VALUE onto the docker argv, on top of the
  shared baseline in ""entrypoint.ConfigVars"" (the model +
  UI aliases every def bridges — see
  _spec/internal/entrypoint/model-alias-bridges.puml).

  Because the value lands on an argv in plain sight,
  ""Validate"" rejects a manifest that lists a name already
  declared in ""env"" — a secret must stay on the broker
  path, never here.
end note

note bottom of AE
  **proveo's opinion, not the operator's input.** ""env"" is what the
  operator supplies and is prompted for when missing; ""config"" forwards
  a host preference only when one exists; ""agentEnv"" lands a value the
  harness should run with unless the operator says otherwise, in name
  order so the plan argv is stable.

  It exists because a default exported by the image entrypoint reaches
  only the docker backend: sbx launches the agent through its own kit
  and never runs the entrypoint, so claudecode came up in whatever
  renderer its saved ""tui"" setting named. ""Validate"" rejects a name
  also declared in ""env"" or ""config"", and an empty value — that is the
  unset state, not a default.
end note

class "Capabilities\ncapabilities:" as CAP <<app>> {
  egress []string
  credentials []string
  providers []string
}

M *-- CAP

note bottom of CAP
  **The per-def choice matrix** — the only source of truth for which
  cells of the egress/credentials/provider space a harness supports.
  An empty list means unconstrained.

  * ""egress: [open]"" — cursor pins its TLS; every intercepting tier
    breaks it
  * ""credentials: [forward]"" — nothing can be injected into that TLS
  * ""providers: [anthropic]"" — claudecode reads only its own key and
    OAuth token

  ""providers"" is not cosmetic. Provider detection is filtered through
  it, because two or more detected keys make the broker refuse to pin —
  the agent then receives the ""proveo-brokered"" sentinel and the
  provider answers 403. A key the harness could never use must not
  enter the set.

  Declaring the matrix here replaced target-name special cases in
  ""cmd/proveo"". An axis the operator did not name is defaulted to the
  def's single allowed value; an axis they did name is refused with the
  reason rather than silently rewritten.
end note

note bottom of M
  **One registration point: adding a harness should mean dropping a def
  directory in, not editing the CLI.** Everything the host needs to run a
  target is declared here rather than discovered by target name.

  ""layout"" is now a single value, ""app"": the repo at ""/app"", the monorepo
  shape every def shares. It once also took ""input-output"" — claudecode's
  ""/workspace/input"" plus ""/workspace/output"" — which was the only reason
  ""ScopeRel"" returned early and left that harness without sub-project scope.
  Retiring it standardised the mount model AND handed claudecode the scoping
  the others already had; a writable output dir is now declared by
  ""output: true"" instead of implied by the layout.

  ""env"" declares variables the harness reads at run time, which is what
  lets the CLI both forward them and prompt for a missing one. ""config"" is
  the non-secret counterpart, forwarded **by value** on top of the shared
  baseline. ""hosts"" are endpoints the **harness itself** needs — a model
  catalog, a plugin registry — infrastructure rather than agent-initiated
  egress, so they are allowlisted and never brokered.

  ""home"" declares durable proveo-owned mounts under ""PROVEO_HOME"", with
  Host relative to it and Container absolute; declaring at least one is
  what activates ""HOME=/proveo-home"" so the harness's own tools write
  where the run can keep them.
end note


@enduml
